// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafelySetInnerHTML HTML entities should render Espace&nbsp;insécable properly 1`] = `
<p>
  Espace insécable
</p>
`;

exports[`SafelySetInnerHTML HTML entities should render L&#8217;arbre est vert properly 1`] = `
<p>
  L’arbre est vert
</p>
`;

exports[`SafelySetInnerHTML XSS attack prevention should prevent basic XSS attacks 1`] = `
<div>
  
      
  <style>
    
        [ontransitionend] {
          transition: all 0.2s;
        }
        [ontransitionend]:hover {
          color: black;
        }
      
  </style>
  
      
  <div>
    XSS Attack
  </div>
  
    
</div>
`;

exports[`SafelySetInnerHTML attributes rules [href] should prevent href with javascript call 1`] = `
<a>
  Foo
</a>
`;

exports[`SafelySetInnerHTML attributes rules [href] should prevent href with spaces and javascript call 1`] = `
<a>
  Foo
</a>
`;

exports[`SafelySetInnerHTML attributes rules should work with React special properties 1`] = `
Array [
  "
      ",
  <article
    class="article"
  >
    
        
    <h2
      class="article__title"
    >
      Article title
    </h2>
          
        
    <p
      class="article__content"
    >
      Lorem ipsum dolor sit amet
    </p>
          
      
  </article>,
  "
    ",
]
`;

exports[`SafelySetInnerHTML configuration file should render normally 1`] = `
<p>
  Configuration 
  <strong>
    File !
  </strong>
</p>
`;

exports[`SafelySetInnerHTML empty elements should render br 1`] = `
<p>
  Hello 
  <br />
   there
</p>
`;

exports[`SafelySetInnerHTML empty elements should render input 1`] = `
<p>
  <input />
</p>
`;

exports[`SafelySetInnerHTML rendering process renders correctly 1`] = `
<p>
  Hello 
  <strong>
    World !
  </strong>
</p>
`;

exports[`SafelySetInnerHTML rendering process renders correctly 2`] = `
<cite>
  About the 
  <a
    href="http://example.com"
  >
    Author !
  </a>
</cite>
`;

exports[`SafelySetInnerHTML rendering process renders only allowedTags 1`] = `
<p>
  Hello 
  World !
</p>
`;
